# fuzzforge_ai

./: .gitignore  .gitlab-ci.example.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_DECISION.md  QUICKSTART_TEMPORAL.md  README.md  USAGE.md  docker-compose.ci.yml  docker-compose.yaml  docker-compose.yml  hub-config.json  pyproject.toml  setup.py  test_security_workflow.py  test_temporal_workflow.py
backend/: Dockerfile  Makefile  README.md  mcp-config.json  pyproject.toml
backend/benchmarks/: README.md  category_configs.py  conftest.py
backend/benchmarks/by_category/fuzzer/: bench_cargo_fuzz.py
backend/benchmarks/by_category/secret_detection/: secret_detection_benchmark_GROUND_TRUTH.json
backend/src/: main.py
backend/src/api/: fuzzing.py  runs.py  workflows.py
backend/src/core/: prefect_manager.py  setup.py
backend/src/models/: findings.py
backend/src/storage/: __init__.py  base.py  s3_cached.py
backend/src/temporal/: __init__.py  discovery.py  manager.py
backend/tests/: README.md  conftest.py
backend/tests/unit/test_modules/: test_atheris_fuzzer.py  test_cargo_fuzzer.py  test_file_scanner.py  test_security_analyzer.py
backend/toolbox/common/: storage_activities.py
backend/toolbox/modules/: base.py
backend/toolbox/modules/analyzer/: llm_analyzer.py  security_analyzer.py
backend/toolbox/modules/android/: mobsf_scanner.py
backend/toolbox/modules/fuzzer/: __init__.py  atheris_fuzzer.py  cargo_fuzzer.py
backend/toolbox/modules/reporter/: __init__.py  native_reporter.py  sarif_reporter.py
backend/toolbox/modules/scanner/: file_scanner.py
backend/toolbox/modules/secret_detection/: __init__.py  gitleaks.py  trufflehog.py
backend/toolbox/workflows/android_static_analysis/: workflow.py
backend/toolbox/workflows/atheris_fuzzing/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/cargo_fuzzing/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/gitleaks_detection/: metadata.yaml  workflow.py
backend/toolbox/workflows/llm_analysis/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/llm_secret_detection/: metadata.yaml
backend/toolbox/workflows/ossfuzz_campaign/: metadata.yaml  workflow.py
backend/toolbox/workflows/python_sast/: metadata.yaml
cli/: main.py  (+3 more)
fuzzforge-common/: pyproject.toml  ruff.toml
fuzzforge-common/src/fuzzforge_common/: __init__.py
fuzzforge-tests/: pyproject.toml
fuzzforge-tests/src/fuzzforge_tests/: fixtures.py
test_projects/rust_fuzz_test/fuzz/: Cargo.toml
(+198 files in other folders)
