[project]
name = "backend"
version = "0.7.3"
description = "FuzzForge OSS backend"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.2",
    "boto3==1.40.68",
    "docker==7.1.0",
    "fastapi==0.121.0",
    "fastmcp==2.13.0.2",
    "pydantic==2.12.4",
    "pyyaml==6.0.3",
    "temporalio==1.18.2",
    "uvicorn==0.38.0",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]
tests = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-benchmark==5.2.1",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "benchmarks"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: mark test as a benchmark",
]
