[project]
name = "fuzzforge-tests"
version = "0.0.1"
description = "Common test utilities and fixtures for FuzzForge packages."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "podman==5.6.0",
    "pydantic>=2.12.4",
    "pytest==9.0.2",
    "fuzzforge-common==0.0.1",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]

[tool.uv.sources]
fuzzforge-common = { workspace = true }
